--- a/index.html
+++ b/index.html
@@ -47,13 +47,18 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="contact">Contact</label>
+                    <label for="contact">Contact (#, Email, FB Page)</label>
                     <input type="text" class="form-control" id="user-contact">
                 </div>
 
                 <div class="form-group">
-                    <label for="file">File</label>
+                    <label for="file">Link</label>
                     <input type="text" class="form-control" id="user-file">
+                </div>
+
+                <div class="form-group">
+                    <label for="file">Description</label>
+                    <input type="text" class="form-control" id="user-description">
                 </div>
 
                 <button type="submit" class="btn btn-default" id="submit">
