--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
