--- a/rough-2.html
+++ b/rough-2.html
@@ -70,6 +70,7 @@
                 var contact = childSnapshot.val().contact;
                 var fileURL = childSnapshot.val().fileURL;
                 var desc = childSnapshot.val().desc;
+               // var coordinates = childSnapshot.val()
 
                 console.log(desc);
 
