--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                     <i class="fa fa-search"></i> Cancel</button>
 
                 <!--alerts for when user submits form or fills it out incorrectly-->
-                <div id="successform" class="alert alert-success" role="alert">Form Submitted Succesfully</div>
+                <div id="badlink" class="alert alert-danger" role="alert">Not a valid Youtube Link</div>
                 <div id="emptyform" class="alert alert-danger" role="alert">Please fill out form completely, dog</div>
                 
             
             </form>
+            <div id="successform" class="alert alert-success" role="alert">Form Submitted Succesfully</div>
         </div>
     </div>
 
