--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h1 class="text-center">Tune Tracker</h1>
                 <img class="radar" src="Images/trackxxx.png"></img>
                 <p id="jumbotrontext">What you gonna do when they track your tune?</p>
+                <div id="coords"></div>
             </div>
         </div>
     </div>
@@ -64,6 +65,8 @@
                     <input type="text" class="form-control" id="user-description">
                 </div>
 
+                
+
                 <button type="submit" class="btn btn-default" id="submit">
                     <i class="fa fa-search"></i> Submit</button>
                 <button type="submit" class="btn btn-default" id="cancel-btn">
@@ -82,6 +85,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
     <script src="app.js"></script>
+
 
 
 </body>
