--- a/rough-2.html
+++ b/rough-2.html
@@ -58,9 +58,24 @@
         var map = new mapboxgl.Map({
             container: 'map', // container id
             style: 'mapbox://styles/mapbox/streets-v9',
+
+            //***********
+            //if time, make the center the user's exact coordinates
+            //***********
+
             center: [-74.50, 40], // starting position
             zoom: 9 // starting zoom
         });
+
+        //ADD GEOLOCATION
+        map.addControl(new mapboxgl.GeolocateControl({
+            positionOptions: {
+                enableHighAccuracy: true
+            },
+            trackUserLocation: true
+        }));
+
+
         map.on('load', function () {
 
             database.ref().on("child_added", function (childSnapshot, prevChildKey) {
@@ -70,9 +85,9 @@
                 var contact = childSnapshot.val().contact;
                 var fileURL = childSnapshot.val().fileURL;
                 var desc = childSnapshot.val().desc;
-               // var coordinates = childSnapshot.val()
+                var coords = childSnapshot.val().coords;
 
-                console.log(desc);
+                console.log(coords);
 
 
                 // Add a layer showing the places.
@@ -82,9 +97,15 @@
                         contact: contact,
                         fileURL: fileURL,
                         desc: desc,
-                        coords: [-75.1740722, 39.9494818]
+
+                        //**************************************************************
+                        //NEED TO FIGURE OUT A WAY FOR THE COORDS VALUE THAT'S GOTTEN FROM FIREBASE TO BE STORED AS AN ARRAY, bc thats what the 'coords' mapbox value takes in, NOT JUST HTML VALUE
+                        coords: coords
                     }
                 ];
+
+                
+
                 var popUps = [];
                 dataFromFirebase.forEach(function (pinpoint) {
                     var formattedData = {
@@ -115,6 +136,9 @@
                 //         }
                 //     })
                 // });
+
+
+                
                 map.addLayer({
                     "id": "places",
                     "type": "symbol",
@@ -145,7 +169,7 @@
                         .setLngLat(coordinates)
                         .setHTML(description)
                         .addTo(map);
-                }); 
+                });
                 // Change the cursor to a pointer when the mouse is over the places layer.
                 map.on('mouseenter', 'places', function () {
                     map.getCanvas().style.cursor = 'pointer';
