--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Tune Tracker</title>
@@ -18,7 +19,7 @@
             <div class="jumbotron">
                 <h1 class="text-center">Tune Tracker</h1>
                 <img class="radar" src="Images/trackxxx.png"></img>
-                <p id="jumbotrontext">What you gonna do when they track your tune?</p>
+                <p id="jumbotrontext">The easy way to find local musicians. What you gonna do when they track your tune?</p>
             </div>
         </div>
     </div>
@@ -42,26 +43,26 @@
         <div class="col-xs-12 col-md-12">
             <form role="form" id="formy">
                 <!--alerts for when user submits form or fills it out incorrectly-->
-                <div id="badlink" class="alert alert-danger" role="alert">Not a valid Youtube Link</div>
-                <div id="emptyform" class="alert alert-danger" role="alert">Please fill out form completely, dog</div>
+                <div id="badlink" class="alert alert-danger" role="alert">Not a valid Youtube link</div>
+                <div id="emptyform" class="alert alert-danger" role="alert">Please fill out form completely</div>
                
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="name" id='usertext'>Name</label>
                     <input type="text" class="form-control" id="user-name">
                 </div>
 
                 <div class="form-group">
-                    <label for="contact">Contact (#, Email, FB Page)</label>
+                    <label for="contact" id='usertext'>Contact (#, Email, FB Page)</label>
                     <input type="text" class="form-control" id="user-contact">
                 </div>
 
                 <div class="form-group">
-                    <label for="file">Link</label>
+                    <label for="file" id='usertext'>Youtube Link</label>
                     <input type="text" class="form-control" id="user-file">
                 </div>
 
                 <div class="form-group">
-                    <label for="file">Description</label>
+                    <label for="file" id='usertext'>Description</label>
                     <input type="text" class="form-control" id="user-description">
                 </div>
 
@@ -71,7 +72,7 @@
                     <i class="fa fa-search"></i> Cancel</button>
 
             </form>
-            <div id="successform" class="alert alert-success" role="alert">Form Submitted Succesfully</div>
+            <div id="successform" class="alert alert-success" role="alert">Form submitted succesfully</div>
         </div>
     </div>
 
