--- a/rough-2.html
+++ b/rough-2.html
@@ -80,6 +80,8 @@
 
             database.ref().on("child_added", function (childSnapshot, prevChildKey) {
 
+                console.log("watsup");
+
 
                 var name = childSnapshot.val().name;
                 var contact = childSnapshot.val().contact;
@@ -89,37 +91,38 @@
                 coords = JSON.parse('[' + coords + ']');
                 console.log(coords);
 
-
-                // Add a layer showing the places.
-                var dataFromFirebase = [
-                    {
-                        name: name,
-                        contact: contact,
-                        fileURL: fileURL,
-                        desc: desc,
-
-                        //**************************************************************
-                        //NEED TO FIGURE OUT A WAY FOR THE COORDS VALUE THAT'S GOTTEN FROM FIREBASE TO BE STORED AS AN ARRAY, bc thats what the 'coords' mapbox value takes in, NOT JUST HTML VALUE
-                        coords: coords
-                        
+                //**************************************
+                //FOREACH() NOT ACTUALLY MAKING POPUPS FOR EACH DATABASE ITEM
+                var formattedData = {
+                    "type": "Feature",
+                    "properties": {
+                        "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
+                        "icon": "theatre"
+                    },
+                    "geometry": {
+                        "type": "Point",
+                        "coordinates": coords
                     }
-                ];
+                };
 
-                var popUps = [];
-                dataFromFirebase.forEach(function (pinpoint) {
-                    var formattedData = {
-                        "type": "Feature",
-                        "properties": {
-                            "description": "<h1>" + pinpoint.name + "</h1>" + "<p>" + pinpoint.contact + "</p><p>" + pinpoint.fileURL + "</p><p>" + pinpoint.desc + "</p>",
-                            "icon": "theatre"
-                        },
-                        "geometry": {
-                            "type": "Point",
-                            "coordinates": pinpoint.coords
+                console.log(formattedData);
+
+                map.addLayer({
+                    "id": "places",
+                    "type": "symbol",
+                    "source": {
+                        "type": "geojson",
+                        "data": {
+                            "type": "FeatureCollection",
+                            "features": [formattedData]
                         }
-                    };
-                    popUps.push(formattedData);
-                })
+                    },
+                    "layout": {
+                        "icon-image": "{icon}-15",
+                        "icon-allow-overlap": true
+                    }
+                });
+
                 // var popUps = ["type": "Feature","properties": {
                 //     "description": "<strong>Make it Mount Pleasant</strong><p><a href=\"http://www.mtpleasantdc.com/makeitmtpleasant\" target=\"_blank\" title=\"Opens in a new window\">Make it Mount Pleasant</a> is a handmade and vintage market and afternoon of live entertainment and kids activities. 12:00-6:00 p.m.</p>",
                 //     "icon": "theatre" },
@@ -137,49 +140,34 @@
                 // });
 
 
-                
-                map.addLayer({
-                    "id": "places",
-                    "type": "symbol",
-                    "source": {
-                        "type": "geojson",
-                        "data": {
-                            "type": "FeatureCollection",
-                            "features": popUps
-                        }
-                    },
-                    "layout": {
-                        "icon-image": "{icon}-15",
-                        "icon-allow-overlap": true
-                    }
-                });
-                // When a click event occurs on a feature in the places layer, open a popup at the
-                // location of the feature, with description HTML from its properties.
-                map.on('click', 'places', function (e) {
-                    var coordinates = e.features[0].geometry.coordinates.slice();
-                    var description = e.features[0].properties.description;
-                    // Ensure that if the map is zoomed out such that multiple
-                    // copies of the feature are visible, the popup appears
-                    // over the copy being pointed to.
-                    while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                        coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-                    }
-                    new mapboxgl.Popup()
-                        .setLngLat(coordinates)
-                        .setHTML(description)
-                        .addTo(map);
-                });
-                // Change the cursor to a pointer when the mouse is over the places layer.
-                map.on('mouseenter', 'places', function () {
-                    map.getCanvas().style.cursor = 'pointer';
-                });
-                // Change it back to a pointer when it leaves.
-                map.on('mouseleave', 'places', function () {
-                    map.getCanvas().style.cursor = '';
-                });
+            });
 
 
 
+
+            // When a click event occurs on a feature in the places layer, open a popup at the
+            // location of the feature, with description HTML from its properties.
+            map.on('click', 'places', function (e) {
+                var coordinates = e.features[0].geometry.coordinates.slice();
+                var description = e.features[0].properties.description;
+                // Ensure that if the map is zoomed out such that multiple
+                // copies of the feature are visible, the popup appears
+                // over the copy being pointed to.
+                while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+                    coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+                }
+                new mapboxgl.Popup()
+                    .setLngLat(coordinates)
+                    .setHTML(description)
+                    .addTo(map);
+            });
+            // Change the cursor to a pointer when the mouse is over the places layer.
+            map.on('mouseenter', 'places', function () {
+                map.getCanvas().style.cursor = 'pointer';
+            });
+            // Change it back to a pointer when it leaves.
+            map.on('mouseleave', 'places', function () {
+                map.getCanvas().style.cursor = '';
             });
 
 
