--- a/rough-2.html
+++ b/rough-2.html
@@ -78,35 +78,37 @@
 
         map.on('load', function () {
 
-            database.ref().on("child_added", function (childSnapshot, prevChildKey) {
+            var popUps = [];
 
-                console.log("watsup");
-
-
-                var name = childSnapshot.val().name;
-                var contact = childSnapshot.val().contact;
-                var fileURL = childSnapshot.val().fileURL;
-                var desc = childSnapshot.val().desc;
-                var coords = childSnapshot.val().coords;
-                coords = JSON.parse('[' + coords + ']');
-                console.log(coords);
-
-                //**************************************
-                //FOREACH() NOT ACTUALLY MAKING POPUPS FOR EACH DATABASE ITEM
-                var formattedData = {
-                    "type": "Feature",
-                    "properties": {
-                        "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
-                        "icon": "theatre"
-                    },
-                    "geometry": {
-                        "type": "Point",
-                        "coordinates": coords
+            database.ref().once('value', function (snapshot) {
+                snapshot.forEach(function (childSnapshot) {
+                    var child = childSnapshot.val();
+                    if (!child.coords || !child.coords.length) {
+                        return;
                     }
-                };
+                    console.log(child);
+                    var name = childSnapshot.val().name;
+                    var contact = childSnapshot.val().contact;
+                    var fileURL = childSnapshot.val().fileURL;
+                    var desc = childSnapshot.val().desc;
+                    var coords = childSnapshot.val().coords;
+                    coords = coords.split(',');
+                    var formattedData = {
+                        "type": "Feature",
+                        "properties": {
+                            "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
+                            "icon": "theatre"
+                        },
+                        "geometry": {
+                            "type": "Point",
+                            "coordinates": coords
+                        }
+                    };
+                    popUps.push(formattedData);
+                    
+                });
 
-                console.log(formattedData);
-
+                console.log(popUps);
                 map.addLayer({
                     "id": "places",
                     "type": "symbol",
@@ -114,7 +116,7 @@
                         "type": "geojson",
                         "data": {
                             "type": "FeatureCollection",
-                            "features": [formattedData]
+                            "features": popUps
                         }
                     },
                     "layout": {
@@ -123,24 +125,72 @@
                     }
                 });
 
-                // var popUps = ["type": "Feature","properties": {
-                //     "description": "<strong>Make it Mount Pleasant</strong><p><a href=\"http://www.mtpleasantdc.com/makeitmtpleasant\" target=\"_blank\" title=\"Opens in a new window\">Make it Mount Pleasant</a> is a handmade and vintage market and afternoon of live entertainment and kids activities. 12:00-6:00 p.m.</p>",
-                //     "icon": "theatre" },
-                // "geometry": {
-                //     "type": "Point",
-                //     "coordinates": [-75.1820221, 39.9559212]];
-                // var dataFromFirebase;
-                // dateFromFirebase.forEach(function(data) {
-                //     popUps.push({
-                //         "type": "Features",
-                //         "properties": {
-                //             "description" : data.description
-                //         }
-                //     })
-                // });
+            })
+
+            // database.ref().on("child_added", function (childSnapshot, prevChildKey) {
+
+            //     console.log("watsup");
 
 
-            });
+            //     var name = childSnapshot.val().name;
+            //     var contact = childSnapshot.val().contact;
+            //     var fileURL = childSnapshot.val().fileURL;
+            //     var desc = childSnapshot.val().desc;
+            //     var coords = childSnapshot.val().coords;
+            //     coords = JSON.parse('[' + coords + ']');
+            //     console.log(coords);
+
+            //     //**************************************
+            //     //FOREACH() NOT ACTUALLY MAKING POPUPS FOR EACH DATABASE ITEM
+
+            //     var formattedData = {
+            //         "type": "Feature",
+            //         "properties": {
+            //             "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
+            //             "icon": "theatre"
+            //         },
+            //         "geometry": {
+            //             "type": "Point",
+            //             "coordinates": coords
+            //         }
+            //     };
+
+            //     console.log(formattedData);
+
+            //     map.addLayer({
+            //         "id": "places",
+            //         "type": "symbol",
+            //         "source": {
+            //             "type": "geojson",
+            //             "data": {
+            //                 "type": "FeatureCollection",
+            //                 "features": [formattedData]
+            //             }
+            //         },
+            //         "layout": {
+            //             "icon-image": "{icon}-15",
+            //             "icon-allow-overlap": true
+            //         }
+            //     });
+
+            //     // var popUps = ["type": "Feature","properties": {
+            //     //     "description": "<strong>Make it Mount Pleasant</strong><p><a href=\"http://www.mtpleasantdc.com/makeitmtpleasant\" target=\"_blank\" title=\"Opens in a new window\">Make it Mount Pleasant</a> is a handmade and vintage market and afternoon of live entertainment and kids activities. 12:00-6:00 p.m.</p>",
+            //     //     "icon": "theatre" },
+            //     // "geometry": {
+            //     //     "type": "Point",
+            //     //     "coordinates": [-75.1820221, 39.9559212]];
+            //     // var dataFromFirebase;
+            //     // dateFromFirebase.forEach(function(data) {
+            //     //     popUps.push({
+            //     //         "type": "Features",
+            //     //         "properties": {
+            //     //             "description" : data.description
+            //     //         }
+            //     //     })
+            //     // });
+
+
+            // });
 
 
 
