added youTube file

--- a/youTube_API/onlineCode.html
+++ b/youTube_API/onlineCode.html
@@ -22,28 +22,31 @@
         <div class = "row">
             <div class = "col-md-6">
 
-                <form id = "userInput">
+                <form role="form" id="formy">
                         <div class="form-group">
-                                <label for="link">Paste your link here</label>
-                                <input type="url" class="form-control" id="link" >
+                                <label for="file">Link</label>
+                                <input type="text" class="form-control" id="user-file">
                         </div>
 
-                        <button id = "submit" type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-default" id="click-me"><i class="fa fa-search"></i> Submit</button>
                         
                 </form>
 
             </div>
-            <div class ="col-md-6">
-
-            </div> 
+            <div class ="col-md-6"></div> 
 
         </div>
 
         <div class ="row">
-            <div clas= "col-md-12">
-                <div id="video"></div>
+            <div class= "col-md-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                        <iframe id ="existing-iframe-example" class="embed-responsive-item" ></iframe>
+                </div>
             </div>
+            <div class= "col-md-6"></div>
+
         </div>
+
     </div>
 
 
@@ -56,5 +59,3 @@
 
 </body>
 </html>
-
-
