--- a/rough-2.html
+++ b/rough-2.html
@@ -52,20 +52,44 @@
         firebase.initializeApp(config);
 
         var database = firebase.database();
+        function getLocation(callback) {
+            if (navigator.geolocation) {
+                var lat_lng = navigator.geolocation.getCurrentPosition(function (position) {
+                    //var user_position = [position.coords.longitude, position.coords.latitude];
+                    var lng = position.coords.longitude;
+                    //user_position.lat = position.coords.latitude; 
+                    // user_position.lng = position.coords.longitude; 
+
+
+                    var lat = position.coords.latitude;
+                    callback(lng + ", " + lat);
+                });
+
+            }
+
+
+            else {
+                x.innerHTML = "Geolocation is not supported by this browser.";
+            }
+        }
 
 
         mapboxgl.accessToken = 'pk.eyJ1Ijoia2hhbGlsb3dlbnM5MiIsImEiOiJjamV2bDR0aXQ3NDdrMzlvNzFjbGw1MHI4In0.Rj8983ke7W9GO3QnOLJg8A';
-        var map = new mapboxgl.Map({
-            container: 'map', // container id
-            style: 'mapbox://styles/mapbox/streets-v9',
+        var map;
+        getLocation(function (latLng) {
+            map = new mapboxgl.Map({
+                container: 'map', // container id
+                style: 'mapbox://styles/mapbox/streets-v9',
 
-            //***********
-            //if time, make the center the user's exact coordinates
-            //***********
+                //***********
+                //if time, make the center the user's exact coordinates
+                //***********
 
-            center: [-74.50, 40], // starting position
-            zoom: 9 // starting zoom
-        });
+                center: latLng.split(','), // starting position
+                zoom: 9 // starting zoom
+            });
+        })
+
 
         //ADD GEOLOCATION
         map.addControl(new mapboxgl.GeolocateControl({
@@ -80,52 +104,56 @@
 
             var popUps = [];
 
-            database.ref().once('value', function (snapshot) {
-                snapshot.forEach(function (childSnapshot) {
-                    var child = childSnapshot.val();
-                    if (!child.coords || !child.coords.length) {
-                        return;
-                    }
-                    console.log(child);
-                    var name = childSnapshot.val().name;
-                    var contact = childSnapshot.val().contact;
-                    var fileURL = childSnapshot.val().fileURL;
-                    var desc = childSnapshot.val().desc;
-                    var coords = childSnapshot.val().coords;
-                    coords = coords.split(',');
-                    var formattedData = {
-                        "type": "Feature",
-                        "properties": {
-                            "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
-                            "icon": "theatre"
+            database.ref().on("child_added", function (childSnapshot, prevChildKey) {
+
+                database.ref().once('value', function (snapshot) {
+                    snapshot.forEach(function (childSnapshot) {
+                        var child = childSnapshot.val();
+                        if (!child.coords || !child.coords.length) {
+                            return;
+                        }
+                        console.log(child);
+                        var name = childSnapshot.val().name;
+                        var contact = childSnapshot.val().contact;
+                        var fileURL = childSnapshot.val().fileURL;
+                        var desc = childSnapshot.val().desc;
+                        var coords = childSnapshot.val().coords;
+                        coords = coords.split(',');
+                        var formattedData = {
+                            "type": "Feature",
+                            "properties": {
+                                "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
+                                "icon": "theatre"
+                            },
+                            "geometry": {
+                                "type": "Point",
+                                "coordinates": coords
+                            }
+                        };
+                        popUps.push(formattedData);
+
+                    });
+
+                    console.log(popUps);
+                    map.addLayer({
+                        "id": "places",
+                        "type": "symbol",
+                        "source": {
+                            "type": "geojson",
+                            "data": {
+                                "type": "FeatureCollection",
+                                "features": popUps
+                            }
                         },
-                        "geometry": {
-                            "type": "Point",
-                            "coordinates": coords
+                        "layout": {
+                            "icon-image": "{icon}-15",
+                            "icon-allow-overlap": true
                         }
-                    };
-                    popUps.push(formattedData);
-                    
+                    });
+
                 });
 
-                console.log(popUps);
-                map.addLayer({
-                    "id": "places",
-                    "type": "symbol",
-                    "source": {
-                        "type": "geojson",
-                        "data": {
-                            "type": "FeatureCollection",
-                            "features": popUps
-                        }
-                    },
-                    "layout": {
-                        "icon-image": "{icon}-15",
-                        "icon-allow-overlap": true
-                    }
-                });
-
-            })
+            });
 
             // database.ref().on("child_added", function (childSnapshot, prevChildKey) {
 
