--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--map goes here-->
     <div class="row">
         <div class="col-xs-12 col-md-12">
-            <div class="mapgoeshere"></div>
+            <div id="map"></div>
         </div>
     </div>
 
