--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="jumbotron">
                 <h1 class="text-center">Tune Tracker</h1>
                 <img class="radar" src="Images/trackxxx.png"></img>
-                <p id="jumbotrontext">What you gonna do when they track your tune?</p>
+                <p id="jumbotrontext">The easy way to find local musicians</p>
                 <div id="coords"></div>
             </div>
         </div>
@@ -57,12 +57,12 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="contact">Contact (#, Email, FB Page)</label>
+                    <label for="contact">E-mail</label>
                     <input type="text" class="form-control" id="user-contact">
                 </div>
 
                 <div class="form-group">
-                    <label for="file">Link</label>
+                    <label for="file">Youtube Link</label>
                     <input type="text" class="form-control" id="user-file">
                 </div>
 
