--- a/rough-2.html
+++ b/rough-2.html
@@ -37,10 +37,11 @@
             font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
         }
     </style>
+
     <div id='map'></div>
 
     <script>
-        // Initialize Firebase
+        // Initializes Firebase
         var config = {
             apiKey: "AIzaSyC9fF0OACaRvyDOUZcLG5bX_LEUgmK6yGo",
             authDomain: "tunetracker-2260d.firebaseapp.com",
@@ -52,21 +53,17 @@
         firebase.initializeApp(config);
 
         var database = firebase.database();
+
+        //Function that gets the user's coordinates
         function getLocation(callback) {
             if (navigator.geolocation) {
                 var lat_lng = navigator.geolocation.getCurrentPosition(function (position) {
-                    //var user_position = [position.coords.longitude, position.coords.latitude];
                     var lng = position.coords.longitude;
-                    //user_position.lat = position.coords.latitude; 
-                    // user_position.lng = position.coords.longitude; 
-
-
                     var lat = position.coords.latitude;
                     callback(lng + ", " + lat);
                 });
 
             }
-
 
             else {
                 x.innerHTML = "Geolocation is not supported by this browser.";
@@ -74,23 +71,19 @@
         }
 
 
+        //Generates the map
         mapboxgl.accessToken = 'pk.eyJ1Ijoia2hhbGlsb3dlbnM5MiIsImEiOiJjamV2bDR0aXQ3NDdrMzlvNzFjbGw1MHI4In0.Rj8983ke7W9GO3QnOLJg8A';
         var map;
         getLocation(function (latLng) {
             map = new mapboxgl.Map({
                 container: 'map', // container id
                 style: 'mapbox://styles/mapbox/streets-v9',
-
-                //***********
-                //if time, make the center the user's exact coordinates
-                //***********
-
                 center: latLng.split(','), // starting position
                 zoom: 9 // starting zoom
-            });
+            })
         })
 
-
+/*
         //ADD GEOLOCATION
         map.addControl(new mapboxgl.GeolocateControl({
             positionOptions: {
@@ -98,31 +91,40 @@
             },
             trackUserLocation: true
         }));
+*/
 
-
+        //Sets up what happens when the map loads (adding map markers & popups)
         map.on('load', function () {
 
+            //Empty array where popup info will go
             var popUps = [];
 
+            //Firebase watcher, gets run every time a new child is added
             database.ref().on("child_added", function (childSnapshot, prevChildKey) {
 
+                //Firebase watcher, is run once to be able to use the value of the response
                 database.ref().once('value', function (snapshot) {
+
+                    //Runs code for each child within the overall snapshot
                     snapshot.forEach(function (childSnapshot) {
-                        var child = childSnapshot.val();
+
                         if (!child.coords || !child.coords.length) {
                             return;
                         }
-                        console.log(child);
+
+                        //Gets the relavant info for the popups from firebase
                         var name = childSnapshot.val().name;
                         var contact = childSnapshot.val().contact;
                         var fileURL = childSnapshot.val().fileURL;
                         var desc = childSnapshot.val().desc;
                         var coords = childSnapshot.val().coords;
                         coords = coords.split(',');
+
+                        //JSON code for Mapbox popups
                         var formattedData = {
                             "type": "Feature",
                             "properties": {
-                                "description": "<h1>" + name + "</h1>" + "<p>" + contact + "</p><p>" + fileURL + "</p><p>" + desc + "</p>",
+                                "description": "<table><tr><td><h1>" + name + "</h1></td></tr><tr><td>" + contact + "</td></tr><tr><td>" + fileURL + "</td></tr><tr><td>" + desc + "</td</tr></table>",
                                 "icon": "theatre"
                             },
                             "geometry": {
@@ -130,11 +132,15 @@
                                 "coordinates": coords
                             }
                         };
+
+                        //Adds the code for each popup to the array
                         popUps.push(formattedData);
 
                     });
 
                     console.log(popUps);
+
+                    //Adds a map layer which uses the popUps array we filled up previously
                     map.addLayer({
                         "id": "places",
                         "type": "symbol",
@@ -155,7 +161,45 @@
 
             });
 
-            // database.ref().on("child_added", function (childSnapshot, prevChildKey) {
+
+            // When a click event occurs on a feature in the places layer, open a popup at the
+            // location of the feature, with description HTML from its properties.
+            map.on('click', 'places', function (e) {
+                var coordinates = e.features[0].geometry.coordinates.slice();
+                var description = e.features[0].properties.description;
+
+
+                // Ensures that if the map is zoomed out such that multiple
+                // copies of the feature are visible, the popup appears
+                // over the copy being pointed to.
+                while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+                    coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+                }
+                new mapboxgl.Popup()
+                    .setLngLat(coordinates)
+                    .setHTML(description)
+                    .addTo(map);
+            });
+
+            // Changes the cursor to a pointer when the mouse is over the places layer.
+            map.on('mouseenter', 'places', function () {
+                map.getCanvas().style.cursor = 'pointer';
+            });
+            // Changes it back to a pointer when it leaves.
+            map.on('mouseleave', 'places', function () {
+                map.getCanvas().style.cursor = '';
+            });
+
+
+        });
+
+
+
+
+
+
+
+                    // database.ref().on("child_added", function (childSnapshot, prevChildKey) {
 
             //     console.log("watsup");
 
@@ -221,36 +265,9 @@
             // });
 
 
-
-
-            // When a click event occurs on a feature in the places layer, open a popup at the
-            // location of the feature, with description HTML from its properties.
-            map.on('click', 'places', function (e) {
-                var coordinates = e.features[0].geometry.coordinates.slice();
-                var description = e.features[0].properties.description;
-                // Ensure that if the map is zoomed out such that multiple
-                // copies of the feature are visible, the popup appears
-                // over the copy being pointed to.
-                while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                    coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-                }
-                new mapboxgl.Popup()
-                    .setLngLat(coordinates)
-                    .setHTML(description)
-                    .addTo(map);
-            });
-            // Change the cursor to a pointer when the mouse is over the places layer.
-            map.on('mouseenter', 'places', function () {
-                map.getCanvas().style.cursor = 'pointer';
-            });
-            // Change it back to a pointer when it leaves.
-            map.on('mouseleave', 'places', function () {
-                map.getCanvas().style.cursor = '';
-            });
-
-
-        });
     </script>
+
+
 
 
 
