--- a/rough-2.html
+++ b/rough-2.html
@@ -73,25 +73,21 @@
 
         //Generates the map
         mapboxgl.accessToken = 'pk.eyJ1Ijoia2hhbGlsb3dlbnM5MiIsImEiOiJjamV2bDR0aXQ3NDdrMzlvNzFjbGw1MHI4In0.Rj8983ke7W9GO3QnOLJg8A';
-        var map;
-        getLocation(function (latLng) {
-            map = new mapboxgl.Map({
+        var map = new mapboxgl.Map({
                 container: 'map', // container id
                 style: 'mapbox://styles/mapbox/streets-v9',
-                center: latLng.split(','), // starting position
-                zoom: 9 // starting zoom
-            })
-        })
+                center: [-75.0, 39.0],//latLng.split(','), // starting position
+                zoom: 6 // starting zoom
+            }).addControl(new mapboxgl.GeolocateControl({
+                positionOptions: {
+                    enableHighAccuracy: true
+                },
+                trackUserLocation: true
+            }));
 
-/*
-        //ADD GEOLOCATION
-        map.addControl(new mapboxgl.GeolocateControl({
-            positionOptions: {
-                enableHighAccuracy: true
-            },
-            trackUserLocation: true
-        }));
-*/
+
+
+
 
         //Sets up what happens when the map loads (adding map markers & popups)
         map.on('load', function () {
@@ -108,7 +104,7 @@
                     //Runs code for each child within the overall snapshot
                     snapshot.forEach(function (childSnapshot) {
 
-                        if (!child.coords || !child.coords.length) {
+                        if (!childSnapshot.val().coords) {
                             return;
                         }
 
